Fixed the alignment issue of the select dropdown for Wavekart app, Also fix spacing issue of the icon for breadcrumb.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -111,6 +111,13 @@ html, body {
   position: relative;
 }
 
+/*glyphicons*/
+.wm-app .breadcrumb {
+  i {
+    padding-right: .2em;
+  }
+}
+
 //Icon widget styles
 .app-icon-wrapper {
   display: inline-block;
@@ -793,6 +800,10 @@ html, body {
 /*Style for select-locale widget*/
 .select-locale.form-control.app-select {
   width: auto;
+}
+/*select wrapper*/
+.app-select-wrapper {
+  display: inline-block;
 }
 
 .app-select option[disabled]:first-child {
